# easy_monnify

./: LICENSE  README.md  a.txt  pyproject.toml
src/: easy_monnify.py
src/assets/: banks.json  banks_ussd.json
src/easy_monnify.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pymonnify/: easy_monnify.py
src/pymonnify.egg-info/: PKG-INFO  SOURCES.txt
